--- a/src/Crypto.csproj
+++ b/src/Crypto.csproj
@@ -10,23 +10,23 @@
     <Company>Roy Schroedel</Company>
     <Authors>Roy Schroedel</Authors>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-    <Description>Provides a handy way to hash data using Adler32, CRC-16/32/64/customizable, MD5, SHA-1, SHA-2-256/384/512; or to encrypt and decrypt data using Rijndael-128/192/256.</Description>
+    <Description>Provides a handy way to hash data using Adler32, CRC (16/32/64/custom), MD5, SHA-1 and SHA-2 (256/384/512), including HMAC keyed hashing for some types. Functions for encrypting and decrypting data with Rijndael (128/192/256) are also offered.</Description>
     <PackageProjectUrl>https://github.com/Roydl/Crypto</PackageProjectUrl>
     <PackageIcon>LOGO.png</PackageIcon>
     <RepositoryUrl>git://github.com/Roydl/Crypto</RepositoryUrl>
-    <PackageTags>encryption decryption adler32 crc16 crc32 crc64 md5 sha sha1 sha2 sha256 sha384 sha512 aes aes128 aes192 aes256 rijndael</PackageTags>
+    <PackageTags>encryption decryption hmac adler32 crc16 crc32 crc64 md5 sha sha1 sha2 sha256 sha384 sha512 aes aes128 aes192 aes256 rijndael</PackageTags>
     <RepositoryType></RepositoryType>
     <SignAssembly>false</SignAssembly>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Version>1.0.6</Version>
+    <Version>1.0.7</Version>
     <PackageId>Roydl.Crypto</PackageId>
     <Product>Roydl.Crypto</Product>
-    <PackageReleaseNotes>- `SymmetricKeyAlgorithm` classes are now `IDisposable`
-  - `Dispose()` will try to completely remove the password and salt from memory. This will only work if there are no other references to these data outside
-- Added interface and abstract generic class of `ChecksumAlgorithm`
-- Added `CrcConfig` structure to quickly create custom CRC classes according to other standards
-- Improved caching so that only used types are cached instead of all
-- Minor fixes, improvements and code cleanups</PackageReleaseNotes>
+    <PackageReleaseNotes>- Fixed an issue where a weak hash was being ignored in the last GUID section of `GetGuid` extension method
+- Instance caching for extension methods is now thread-safe
+- `HMAC` encryption is now available for MD5 and SHA-1+2 by defining the `SecretKey` instance field
+  - The `SecretKey` can be removed from process memory by calling the `DestroySecretKey()` instance method
+- The hash byte order of Adler32 and CRC-16+32+64 now depends on the endianness of the processor architecture
+- Improved documentation in general</PackageReleaseNotes>
     <AppDesignerFolder>Resources</AppDesignerFolder>
   </PropertyGroup>
 
