General project cleanup and preparation for final release.

--- a/test/Roydl.Crypto.Test.csproj
+++ b/test/Roydl.Crypto.Test.csproj
@@ -38,7 +38,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Crypto.csproj" />
+    <ProjectReference Include="..\src\Roydl.Crypto.csproj" />
   </ItemGroup>
 
 </Project>
