Allow unsafe blocks.

--- a/src/Roydl.Crypto.csproj
+++ b/src/Roydl.Crypto.csproj
@@ -28,12 +28,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile Condition="'$(TargetFramework)'=='netcoreapp3.1'">obj\Debug\netcoreapp3.1\Roydl.Crypto.xml</DocumentationFile>
     <DocumentationFile Condition="'$(TargetFramework)'=='net5.0'">obj\Debug\net5.0\Roydl.Crypto.xml</DocumentationFile>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <OutputPath>..\bin\Debug</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile Condition="'$(TargetFramework)'=='netcoreapp3.1'">obj\Release\netcoreapp3.1\Roydl.Crypto.xml</DocumentationFile>
     <DocumentationFile Condition="'$(TargetFramework)'=='net5.0'">obj\Release\net5.0\Roydl.Crypto.xml</DocumentationFile>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <OutputPath>..\bin\Release</OutputPath>
   </PropertyGroup>
 
