--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,12 +15,16 @@ jobs:
     - uses: actions/checkout@v2
     - name: Setup .NET Core 3.1	
       uses: actions/setup-dotnet@v1	
-      with:	
+      with:
         dotnet-version: 3.1.x
     - name: Setup .NET Core 6.0
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: 6.0.x
+    - name: Setup .NET Core 7.0
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 7.0.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
